tree-sitter-cvg/test/corpus/melody_line.txt
================================================================================
Rest with duration in melody line
================================================================================

clip bass_a [bars 1] {
  bass r:8
}

--------------------------------------------------------------------------------

(source_file
  (clip_def
    name: (identifier)
    (clip_header
      (bars_attr
        (number)))
    (melody_line
      instrument: (identifier)
      (rest
        (duration)))))

================================================================================
Melody line with notes and rest with duration
================================================================================

clip bass_a [bars 1] [scale c minor] {
  bass c:3:8 c:3:8 eb:3:8 f:3:4 r:8
}

--------------------------------------------------------------------------------

(source_file
  (clip_def
    name: (identifier)
    (clip_header
      (bars_attr
        (number)))
    (clip_header
      (scale_attr
        (note_name)
        (scale_type)))
    (melody_line
      instrument: (identifier)
      (pitched_note
        (note_name)
        (octave)
        (duration))
      (pitched_note
        (note_name)
        (octave)
        (duration))
      (pitched_note
        (note_name)
        (octave)
        (duration))
      (pitched_note
        (note_name)
        (octave)
        (duration))
      (rest
        (duration)))))

================================================================================
Rest without duration in melody line
================================================================================

clip bass_a [bars 1] {
  bass c:3:8 r c:3:4
}

--------------------------------------------------------------------------------

(source_file
  (clip_def
    name: (identifier)
    (clip_header
      (bars_attr
        (number)))
    (melody_line
      instrument: (identifier)
      (pitched_note
        (note_name)
        (octave)
        (duration))
      (rest)
      (pitched_note
        (note_name)
        (octave)
        (duration)))))
